# NexTerm

./: .gitignore  errors.txt  index.html  package.json
.github/workflows/: build.yml
scripts/: generate-icons.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: filesystem.rs  lib.rs  main.rs  terminal.rs
src/api/: tauri.ts
src/components/editor/: CodeEditor.css  CodeEditor.tsx
src/components/fileExplorer/: FileExplorer.css  FileExplorer.tsx
src/components/layout/: MainLayout.css  MainLayout.tsx  Sidebar.css  Sidebar.tsx  SplitPane.css  SplitPane.tsx
src/components/terminal/: TerminalInstance.tsx  TerminalManager.css  TerminalManager.tsx
src/hooks/: useFileExplorer.ts  useTerminal.ts
src/stores/: editorStore.ts  fileStore.ts  layoutStore.ts  terminalStore.ts
src/styles/: global.css
