[package]
name = "nexterm"
version = "0.1.0"
description = "A modern multi-terminal application with file explorer and code editor"
authors = ["NexTerm"]
edition = "2021"

[lib]
name = "nexterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "5"
log = "0.4"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }